syntax = "proto3";
//import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";

package net.almightshell.ecache.masternode.services.proto3;

option java_multiple_files = true;

/**
 * Request & Response
 */
message RegisterSlaveRequest {
    string key = 1;
    int32 port = 2; 
}
message RegisterSlaveResponse{
    string key = 1;
}

message GlobalDepthRequest{
    
}
message GlobalDepthResponse{
    int32 globalDepth = 1;
}

 
message SplitVersionResponse{
    int32 splitVersion = 1;
}

message DoubleDirectoryRequest{
    
}
message DoubleDirectoryResponse{
     
}

message MasterRequestSplitRequest{
    string key = 1;
}
message MasterRequestSplitResponse{
    bool success = 1;
}

message DirectoryMessage{
    string key = 1;
    string address = 2;
    int32 port = 3;
    int32 position = 4;
}
message DirectoryMessageRespponse{
    repeated DirectoryMessage directory = 1;
}

message MetadataMessage{
    repeated DirectoryMessage directory = 1;
    int32 globalDepth = 2;
    int32 splitVersion = 3;
}

/**
 * Service
 */
service MasterNodeServices{
     rpc getSplitVersion(google.protobuf.Empty) returns (SplitVersionResponse);
    rpc getMetadata(google.protobuf.Empty) returns (MetadataMessage);
    rpc registerSlave(RegisterSlaveRequest) returns (RegisterSlaveResponse);
    rpc getGlobalDepth(google.protobuf.Empty) returns (GlobalDepthResponse);
    rpc getDirectory(google.protobuf.Empty) returns (DirectoryMessageRespponse);
    rpc doubleDirectory(DoubleDirectoryRequest) returns (DoubleDirectoryResponse);
    rpc masterRequestSplit(MasterRequestSplitRequest) returns (MasterRequestSplitResponse);
}